# DEXArb

./: .gitignore  CMakeLists-windows.txt  CMakeLists.txt  CMakePresets.json  Containerfile  DeployBins.sh  DeployBins.txt  Dockerfile.wine  PROJECT_STRUCTURE.md  QUICK_START_WINE.md  README.md  README_WINE.md  SECURITY.md  build-and-deploy.sh  build-apple-container.sh  gitconfig-rost.txt  neozork-config  neozork-config.example  neozork-scan-stat  pytest.ini  quick-test.sh  read.md  requirements.txt  test-wine.bat  test-wine.sh  test_rpc_core_failure.xml  vcpkg.json
.github/workflows/: ci.yml
app/: simple-test.cpp  test-wine.bat
dist-macos/: README.txt  dexarb
docs/: BUILD_AND_USAGE.md  BUILD_MODERN.md  BUILD_SCRIPT.md  DOCUMENTATION_REORGANIZATION_COMPLETE.md  DOCUMENTATION_REORGANIZATION_REPORT.md  FLAG_TESTING_REPORT.md  IMMEDIATE_ACTIONS.md  MODERNIZATION_ANALYSIS.md  MODERNIZATION_SUMMARY.md  MULTI_PLATFORM_IMPLEMENTATION_PLAN.md  PRIORITY_1_COMPLETION_REPORT.md  PROJECT_DESCRIPTION.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  REORGANIZATION_COMPLETE.md  REORGANIZATION_REPORT.md  TESTING_GUIDE.md  TESTING_REPORT.md  VERSION_HISTORY.md  WINDOWS_WINE_IMPLEMENTATION_SUMMARY.md  WINE_DOCKER_USAGE.md  multi-platform-build.md  wine-docker-setup.md
docs/deployment/: README.md  multi-platform-build.md  multi-platform-plan.md
docs/development/: IMMEDIATE_ACTIONS.md  MODERNIZATION_SUMMARY.md  NEW_FEATURES.md  README.md  project-structure.md
docs/features/: examples-command.md  new-flags-implementation.md
docs/getting-started/: ALPINE_CONTAINER_RUNNER.md  BUILD_AND_USAGE.md  QUICK_START.md  README.md  UBUNTU_CONTAINER_RUNNER.md  UNIVERSAL_BUILD_SCRIPT.md  WINDOWS_CONTAINER_RUNNER.md  WINDOWS_IN_UBUNTU_WINE.md  configuration.md  first-steps.md
docs/reference/: README.md  README_ORIGINAL.md  VERSION_HISTORY.md  wine-reference.md
docs/reports/: ALL_TESTS_FIXED_FINAL_REPORT.md  BUILD_ERRORS_FINAL_FIX_REPORT.md  BUILD_ERRORS_FIX_REPORT.md  BUILD_FIXES_VERIFICATION.md  BUILD_SCRIPT_FINAL_FIX_REPORT.md  BUILD_SCRIPT_FIXED_REPORT.md  BUILD_SCRIPT_INTERACTIVE_FIX_REPORT.md  BUILD_SCRIPT_INTERACTIVE_TESTS_FINAL_REPORT.md  BUILD_SCRIPT_TESTS_FIX_REPORT.md  CURRENT_STATUS_REPORT.md  EXAMPLES_COMMAND_IMPLEMENTATION_REPORT.md  EXPANDED_DEXES_IMPLEMENTATION_REPORT.md  FINAL_STATUS_SUMMARY.md  HELP_OUTPUT_ALIGNMENT_FIX_REPORT.md  MODERN_HELP_IMPLEMENTATION_REPORT.md  NETWORK_ID_SUPPORT_FIXED_REPORT.md  NEW_FEATURES_IMPLEMENTATION_FINAL_REPORT.md  NEW_FEATURES_IMPLEMENTATION_REPORT.md  POOL_SHOWING_FINAL_ANALYSIS.md  POOL_SHOWING_ISSUE_ANALYSIS.md  PYTHON_CLEANUP_REPORT.md  README.md  RPCCORE_TIMEOUT_FIXED_REPORT.md  SCAN_FANTOM_FIXED_REPORT.md  SCAN_ZERO_POOLS_ANALYSIS.md  SCAN_ZERO_POOLS_FINAL_ANALYSIS.md  WINDOWS_WINE_IMPLEMENTATION_REPORT.md
docs/scripts/: README.md  REORGANIZATION_COMPLETE.md  SCRIPTS_REORGANIZATION_REPORT.md
docs/testing/: README.md  TESTING_REPORT.md  TESTING_STATUS_SUMMARY.md
include/: README.md  arbitrage.h  blockchain.h  check_rpc_endpoints.h  config_get.h  config_manager.h  dex_pools.h  dex_scanner.h  dex_stats.h  dex_tokens.h  input.h  main.h  measure.h  modern_format.h  modern_result.h  profit_analyzer.h  queries.h  rpc_core.h  wallet.h
include/cli/: command_parser.h  help_display.h
include/config/: config_manager.h
include/core/: application.h  blockchain.h  profit_analyzer.h
include/dex/: dex_pools.h  dex_scanner.h  dex_stats.h  dex_tokens.h
include/di/: service_container.h
include/interfaces/: iblockchain_scanner.h  iconfig_manager.h  irpc_client.h
include/network/: queries.h  rpc_core.h
include/utils/: input.h  modern_format.h  modern_utils.h  platform.h  wallet.h
scripts/: README.md  build-apple-container.sh  scan-fantom.sh  wine-docker.sh
scripts/container/: QUICK_START_WINDOWS_WINE.md  README.md  example-usage.sh  run-windows-wine-container.sh
scripts/containers/: README.md  README_ALPINE.md  README_WINDOWS_WINE.md  README_WINDOWS_WINE_FINAL.md  run-alpine-container.sh  run-alpine-fast.sh  run-alpine-simple.sh  run-ubuntu-container.sh  run-windows-container.sh  run-windows-in-ubuntu-wine.sh  test-windows-wine.sh
scripts/deploy/: README.md
scripts/deployment/: DeployBins.sh  README.md
scripts/docker/: README.md  docker-compose.wine.yml
scripts/test/: README.md
scripts/testing/: README.md  simple-windows-test.cpp  test-all-platforms.sh  test-powershell.ps1  test-simple.bat  test-wine-complete.sh  test-wine.cpp  test-wine.sh  wine-test.bat
scripts/utilities/: README.md  neozork-config  neozork-scan-stat
scripts/utils/: README.md
src/: MeasureRunTime.cpp  README.md  arbitrage.cpp  blockchain.cpp  check_rpc_endpoints.cpp  config_get.cpp  config_manager.cpp  dex_pools.cpp  dex_scanner.cpp  dex_stats.cpp  dex_tokens.cpp  input.cpp  main.cpp  main.h  measure.cpp  modern_utils.cpp  preliminary_check_rpc_endpoints.cpp  profit_analyzer.cpp  queries.cpp  rpc_core.cpp  wallet.cpp
src/cli/: command_parser.cpp  help_display.cpp
src/core/: application.cpp  (+3 more)
tests/: README.md  __init__.py  test-universal-script.sh  test_blockchain.py  test_config.py  test_dex_operations.py  test_input.py  test_main.cpp  test_main_functions.py  test_modern_utils.py  test_rpc_core.py
tests/cpp/: CMakeLists.txt  README.md  TEST_STATUS_REPORT.md  run_all_tests.sh  test_all_flags_and_results.cpp  test_application.cpp  test_arbitrage.cpp  test_blockchain.cpp  test_cli_commands.cpp  test_command_line_flags.cpp  test_command_parser.cpp  test_config_manager.cpp  test_dex_pools.cpp  test_dex_scanner.cpp  test_dex_stats.cpp  test_dex_tokens.cpp  test_examples_command.cpp  test_help_display.cpp  test_input.cpp  test_interfaces.cpp  test_main.cpp  test_main_structures.cpp  test_measure.cpp  test_modern_format  test_modern_format.cpp  test_modern_result.cpp  test_modern_result_extended.cpp  test_modern_utils.cpp  test_new_features.cpp  test_platform.cpp  test_platform_compatibility.cpp  test_profit_analyzer.cpp  test_queries.cpp  test_rpc_core.cpp  test_service_container.cpp  test_universal_build_script.cpp  test_wallet.cpp
tools/: README.md
(+11 files in other folders)
